# zkevm-circuits

./: Cargo.toml  change-lookup.sh
bench-results/: h2-lookup-12-rows  h2-lookup-25-rows  mv-lookup-12-rows  mv-lookup-25-rows
bus-mapping/: Cargo.toml
circuit-benchmarks/: Cargo.toml
eth-types/: Cargo.toml
eth-types/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: lib.rs
integration-tests/: Cargo.toml
testool/: Cargo.toml
zkevm-circuits/: Cargo.toml
zkevm-circuits/benches/: prover.rs
zkevm-circuits/src/: copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  keccak_circuit.rs  lib.rs  root_circuit.rs  table.rs  test_util.rs  util.rs  witness.rs
zkevm-circuits/src/copy_circuit/: test.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs  step.rs  util.rs
zkevm-circuits/src/evm_circuit/execution/: add_sub.rs  addmod.rs  address.rs  balance.rs  begin_tx.rs  bitwise.rs  block_ctx.rs  blockhash.rs  byte.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callop.rs  callvalue.rs  chainid.rs  codecopy.rs  codesize.rs  comparator.rs  create.rs  dup.rs  end_block.rs  end_tx.rs  error_code_store.rs  error_invalid_creation_code.rs  error_invalid_jump.rs  error_invalid_opcode.rs  error_oog_account_access.rs  error_oog_call.rs  error_oog_constant.rs  error_oog_exp.rs  error_oog_log.rs  error_oog_memory_copy.rs  error_oog_sha3.rs  error_oog_sload_sstore.rs  error_return_data_oo_bound.rs  error_stack.rs  error_write_protection.rs  exp.rs  extcodecopy.rs  (+32 more)
zkevm-circuits/src/evm_circuit/util/: instrumentation.rs  math_gadget.rs
zkevm-circuits/src/evm_circuit/util/math_gadget/: abs_word.rs  add_words.rs  byte_size.rs  cmp_words.rs  comparison.rs  constant_division.rs  is_equal.rs  is_zero.rs  lt.rs  lt_word.rs  min_max.rs  modulo.rs  mul_add_words.rs  mul_add_words512.rs  mul_word_u64.rs  pair_select.rs  range_check.rs  rlp.rs  test_util.rs
zkevm-circuits/src/keccak_circuit/: keccak_packed_multi.rs  table.rs  test.rs  util.rs
zkevm-circuits/src/root_circuit/: aggregation.rs  dev.rs
zkevm-circuits/src/table/: keccak_table.rs  mpt_table.rs  tx_table.rs
zkevm-circuits/src/util/: word.rs
zkevm-circuits/src/witness/: block.rs  mpt.rs  rw.rs
