[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "gadgets",
    "eth-types",
    "external-tracer",
    "mock",
]

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
