[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
eth-types = { path = "../eth-types" }
strum = "0.24"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
