[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
#halo2_proofs = { git = "https://github.com/geometryresearch/halo2.git", branch = "pse-mvlookup" }
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
#halo2_proofs = { git = "https://github.com/aleph-zero-foundation/halo2.git", branch = "pse-mvlookup" }
halo2_proofs = { git = "https://github.com/aleph-zero-foundation/halo2.git", branch = "halo2-lookup" }
eth-types = { path = "../eth-types" }
strum = "0.24"

[dev-dependencies]
rand = "0.8"
