[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/aleph-zero-foundation/halo2.git", branch = "pse-mvlookup" }
eth-types = { path = "../eth-types" }
strum = "0.24"

[dev-dependencies]
rand = "0.8"
