[package]
name = "zkevm-circuits"
version = "0.1.0"
authors = ["therealyingtong <yingtong@z.cash>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/aleph-zero-foundation/halo2.git", features = ["circuit-params", "counter"], branch = "pse-mvlookup" }
array-init = "2.0.0"
bus-mapping = { path = "../bus-mapping" }
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
ethers-core = "2.0.7"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.3"
lazy_static = "1.4"
log = "0.4"
cli-table = { version = "0.4", optional = true }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
bus-mapping = { path = "../bus-mapping", features = ["test"] }
itertools = "0.10.1"
rand = "0.8"
rand_chacha = "0.3"

[features]
default = []
